tests/phase5/assert_bad_condition.stderr
tests/phase5/assert_bad_condition.sl:41:42: error: expected bool expression
