tests/phase5/assert_bad_condition.sl
package demo

fn Main() i32 {
    assert 1
    return 0
}
